Add platform-rs, vulkan-mir, EGL_KHR_platform_mir.
This commit
- incorporates support for Mir's new render surface based EGL driver
(alpha)
- adds Vulkan WSI driver for Mir (alpha)
- adds EGL_KHR_platform_mir (yet to be ratified)

The render surface-based backend is implemented as a new platform so the
legacy (buffer stream-based) backend can be supported simultaneously.

TODO:
- Mir-team intends to change the name 'render surface' (and all its
associated symbols) to 'surface' in the very new feature. As soon as
that happens this patch will require a refresh.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+mesa (17.0.2-1ubuntu2) UNRELEASED; urgency=medium
+
+  [ Cemil Azizoglu ]
+  * egl-platform-rs.patch: Add support for Mir's new render surface based
+    EGL driver
+  * khr_platform_mir.patch: Add EGL_KHR_platform_mir
+  * vulkan-mir.patch: Add Vulkan WSI driver for Mir
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Tue, 28 Mar 2017 19:15:55 +0300
+
 mesa (17.0.2-1ubuntu1) zesty; urgency=medium
 
   * Merge from Debian experimental.
