update the changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (17.0.2-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Tue, 21 Mar 2017 09:30:52 +0200
+
 mesa (17.0.1-1) experimental; urgency=medium
 
   [ Timo Aaltonen ]
