--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
 mesa (17.0.2-1) UNRELEASED; urgency=medium
 
+  [ Timo Aaltonen ]
   * New upstream release.
+
+  [ Andreas Boll ]
+  * Require LLVM on sparc64:
+    - Enables radeonsi, llvmpipe and radv drivers.
+    - Enables OpenCL support.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Tue, 21 Mar 2017 09:30:52 +0200
 
