--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-mesa (13.0.6-1) UNRELEASED; urgency=medium
+mesa (13.0.6-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 21 Mar 2017 11:33:34 +0100
+ -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 21 Mar 2017 14:02:03 +0100
 
 mesa (13.0.5-1) unstable; urgency=medium
 
