--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (17.0.2-1ubuntu1) zesty; urgency=medium
+
+  * Merge from Debian experimental.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Tue, 21 Mar 2017 13:36:51 +0200
+
 mesa (17.0.2-1) experimental; urgency=medium
 
   [ Timo Aaltonen ]
