--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (17.0.3-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Boll <andreas.boll.dev@gmail.com>  Mon, 03 Apr 2017 10:10:35 +0200
+
 mesa (17.0.2-1) experimental; urgency=medium
 
   [ Timo Aaltonen ]
