--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 mesa (17.0.3-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Update d/upstream/signing-key.asc with key from Andres Gomez.
 
  -- Andreas Boll <andreas.boll.dev@gmail.com>  Mon, 03 Apr 2017 10:10:35 +0200
 
