--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (17.0.4-1) UNRELEASED; urgency=medium
+
+  * New upstrem release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Wed, 19 Apr 2017 14:22:13 +0300
+
 mesa (17.0.3-1) experimental; urgency=medium
 
   * New upstream release.
