--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-mesa (17.0.4-1) UNRELEASED; urgency=medium
+mesa (17.0.4-1) experimental; urgency=medium
 
   * New upstrem release.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Wed, 19 Apr 2017 14:22:13 +0300
+ -- Timo Aaltonen <tjaalton@debian.org>  Wed, 19 Apr 2017 16:14:20 +0300
 
 mesa (17.0.3-1) experimental; urgency=medium
 
