--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mesa (17.1.0~rc2-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Merge from Debian.
+  * i915-dont-default-to-2.1.patch: Dropped, implemented upstream.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Thu, 27 Apr 2017 08:23:14 +0300
+
 mesa (17.1.0~rc2-1) UNRELEASED; urgency=medium
 
   * New upstream release candidate.
