--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mesa (17.1.2-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+  * Update d/upstream/signing-key.asc with key from Juan A. Suarez Romero.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Tue, 06 Jun 2017 11:52:09 +0300
+
 mesa (17.1.0-1) experimental; urgency=medium
 
   * New upstream release.
