--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-mesa (17.1.2-1) UNRELEASED; urgency=medium
+mesa (17.1.2-1) experimental; urgency=medium
 
   * New upstream release.
   * Update d/upstream/signing-key.asc with key from Juan A. Suarez Romero.
   * README.source: Add documentation about how to update d/u/signing-
     key.asc.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Tue, 06 Jun 2017 11:52:09 +0300
+ -- Timo Aaltonen <tjaalton@debian.org>  Wed, 07 Jun 2017 10:32:08 +0300
 
 mesa (17.1.0-1) experimental; urgency=medium
 
