--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-mesa (17.1.2-1ubuntu1) UNRELEASED; urgency=medium
+mesa (17.1.2-1ubuntu1) artful; urgency=medium
 
   * Merge from Debian.
   * Refresh patches.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Wed, 07 Jun 2017 10:46:27 +0300
+ -- Timo Aaltonen <tjaalton@debian.org>  Wed, 07 Jun 2017 13:24:07 +0300
 
 mesa (17.1.2-1) experimental; urgency=medium
 
