--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mesa (17.1.2-2) UNRELEASED; urgency=medium
+
+  * rules: --with-egl-platforms is deprecated, use --with-platforms
+    instead.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Wed, 07 Jun 2017 13:38:38 +0300
+
 mesa (17.1.2-1) experimental; urgency=medium
 
   * New upstream release.
