--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ mesa (17.1.2-2) UNRELEASED; urgency=medium
 
   * rules: --with-egl-platforms is deprecated, use --with-platforms
     instead.
+  * rules: Enable surfaceless EGL platform.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Wed, 07 Jun 2017 13:38:38 +0300
 
