New upstream release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (17.1.3-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 22 Jun 2017 22:30:02 +0200
+
 mesa (17.1.2-2) experimental; urgency=medium
 
   * rules: --with-egl-platforms is deprecated, use --with-platforms
