--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-mesa (17.1.3-1) UNRELEASED; urgency=medium
+mesa (17.1.3-1) experimental; urgency=medium
 
   * New upstream release.
 
- -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 22 Jun 2017 22:30:02 +0200
+ -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 26 Jun 2017 00:03:57 +0200
 
 mesa (17.1.2-2) experimental; urgency=medium
 
