--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (17.1.3-2) unstable; urgency=medium
+
+  * Upload to unstable.
+
+ -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 27 Jun 2017 00:26:18 +0200
+
 mesa (17.1.3-1) experimental; urgency=medium
 
   * New upstream release.
