--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (17.1.4-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Mon, 03 Jul 2017 18:29:51 +0300
+
 mesa (17.1.3-2) unstable; urgency=medium
 
   * Upload to unstable.
