--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-mesa (17.1.4-1ubuntu1) UNRELEASED; urgency=medium
+mesa (17.1.4-1ubuntu1) artful; urgency=medium
 
   * Merge from Debian.
     - update/refresh Mir patches
 
- -- Timo Aaltonen <tjaalton@debian.org>  Mon, 03 Jul 2017 19:03:39 +0300
+ -- Timo Aaltonen <tjaalton@debian.org>  Mon, 03 Jul 2017 19:04:38 +0300
 
 mesa (17.1.4-1) unstable; urgency=medium
 
