--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 mesa (17.1.5-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Update Standards-Version to 4.0.0 for lintian
+    out-of-date-standards-version
 
  -- Jordan Justen <jordan.l.justen@intel.com>  Sat, 15 Jul 2017 00:22:19 -0700
 
