debian/changelog: Use team upload for lintian changelog-should-mention-nmu
Signed-off-by: Jordan Justen <jordan.l.justen@intel.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 mesa (17.1.5-1) UNRELEASED; urgency=medium
 
+  * Team upload.
+
+  [ Jordan Justen ]
   * New upstream release.
   * Update Standards-Version to 4.0.0 for lintian
     out-of-date-standards-version
