--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-mesa (20.1.9-1) UNRELEASED; urgency=medium
+mesa (20.1.9-1) unstable; urgency=medium
 
   * New upstream release.
   * control: Add libclang-cpp11-dev to build-depends. (Closes: #954849)
 
- -- Timo Aaltonen <tjaalton@debian.org>  Thu, 01 Oct 2020 09:57:37 +0300
+ -- Timo Aaltonen <tjaalton@debian.org>  Thu, 01 Oct 2020 10:12:00 +0300
 
 mesa (20.1.8-1) unstable; urgency=medium
 
