--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 mesa (20.3.0~rc1-1) UNRELEASED; urgency=medium
 
   * New upstream release candidate.
+  * control: Add libxcb-shm0-dev to build-depends.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Wed, 11 Nov 2020 14:45:25 +0200
 
