--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-mesa (20.3.0~rc1-1) UNRELEASED; urgency=medium
+mesa (20.3.0~rc1-1) experimental; urgency=medium
 
   * New upstream release candidate.
   * control: Add libxcb-shm0-dev to build-depends.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Wed, 11 Nov 2020 14:45:25 +0200
+ -- Timo Aaltonen <tjaalton@debian.org>  Wed, 11 Nov 2020 18:29:42 +0200
 
 mesa (20.2.2-1) unstable; urgency=medium
 
