--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (20.2.3-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Tue, 24 Nov 2020 16:46:25 +0200
+
 mesa (20.2.2-1) unstable; urgency=medium
 
   * New upstream release.
