--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-mesa (20.2.3-1) UNRELEASED; urgency=medium
+mesa (20.2.3-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Tue, 24 Nov 2020 16:46:25 +0200
+ -- Timo Aaltonen <tjaalton@debian.org>  Wed, 25 Nov 2020 13:32:39 +0200
 
 mesa (20.2.2-1) unstable; urgency=medium
 
