--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (20.2.4-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Mon, 07 Dec 2020 10:39:32 +0200
+
 mesa (20.2.3-1) unstable; urgency=medium
 
   * New upstream release.
