--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-mesa (20.2.4-1) UNRELEASED; urgency=medium
+mesa (20.2.4-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Mon, 07 Dec 2020 10:39:32 +0200
+ -- Timo Aaltonen <tjaalton@debian.org>  Mon, 07 Dec 2020 15:11:48 +0200
 
 mesa (20.2.3-1) unstable; urgency=medium
 
