--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (20.3.0-2) UNRELEASED; urgency=medium
+
+  * rules: Fix the name of the broadcom vulkan driver.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Tue, 08 Dec 2020 09:03:41 +0200
+
 mesa (20.3.0-1) experimental; urgency=medium
 
   * New upstream release.
