--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 mesa (20.3.0-2) UNRELEASED; urgency=medium
 
   * rules: Fix the name of the broadcom vulkan driver.
+  * control, rules: Drop llvm support from kfreebsd, as llvm isn't built
+    there.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Tue, 08 Dec 2020 09:03:41 +0200
 
