--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ mesa (20.3.0-2) UNRELEASED; urgency=medium
   * rules: Move common settings for !hurd to the top.
   * rules: Use a better method to build the arrays of drivers, thanks
     Witold Baryluk! (Closes: #972736)
+  * rules: Clarify the status of wayland support on non-linux ports.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Tue, 08 Dec 2020 09:03:41 +0200
 
