--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mesa (20.3.0-2) UNRELEASED; urgency=medium
+mesa (20.3.0-2) experimental; urgency=medium
 
   * rules: Fix the name of the broadcom vulkan driver.
   * control, rules: Drop llvm support from kfreebsd, as llvm isn't built
@@ -10,7 +10,7 @@ mesa (20.3.0-2) UNRELEASED; urgency=medium
     Witold Baryluk! (Closes: #972736)
   * rules: Clarify the status of wayland support on non-linux ports.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Tue, 08 Dec 2020 09:03:41 +0200
+ -- Timo Aaltonen <tjaalton@debian.org>  Thu, 10 Dec 2020 14:21:30 +0200
 
 mesa (20.3.0-1) experimental; urgency=medium
 
