--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (20.2.5-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Wed, 16 Dec 2020 23:11:17 +0200
+
 mesa (20.2.4-1) unstable; urgency=medium
 
   * New upstream release.
