--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-mesa (20.2.6-1) UNRELEASED; urgency=medium
+mesa (20.2.6-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Thu, 17 Dec 2020 06:40:43 +0200
+ -- Timo Aaltonen <tjaalton@debian.org>  Thu, 17 Dec 2020 06:42:32 +0200
 
 mesa (20.2.5-1) unstable; urgency=medium
 
