--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-mesa (20.3.1-1) UNRELEASED; urgency=medium
+mesa (20.3.1-1) experimental; urgency=medium
 
   * New upstream release.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Fri, 18 Dec 2020 09:38:20 +0200
+ -- Timo Aaltonen <tjaalton@debian.org>  Fri, 18 Dec 2020 10:23:30 +0200
 
 mesa (20.3.0-2) experimental; urgency=medium
 
