--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mesa (20.3.1-2) UNRELEASED; urgency=medium
+
+  * rules: Enable lavapipe (vulkan swrast) where llvm and vulkan is
+    enabled.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Tue, 29 Dec 2020 17:46:25 +0200
+
 mesa (20.3.1-1) experimental; urgency=medium
 
   * New upstream release.
